@@ -3,6 +3,9 @@ MComix 0.92 (4.0.5)
     - Fixed a bug that made MComix save preview thumbnails to disk
       even if this behaviour was disabled in the preferences window.
 
+    - Fixed a bug in the the archive editor that prevented it from actually
+      saving the modified archive on Win32.
+
     - Added limited support for password-protected ZIP and RAR archives.
       For ZIP archives, Python >= 2.6 is required. For RAR archives,
       only extraction with libunrar/unrar.dll is supported.
